#################################################################################
#                OCamldot                                                       #
#                                                                               #
#    Copyright (C) 2005-2012 Institut National de Recherche en Informatique et  #
#    en Automatique. All rights reserved.                                       #
#                                                                               #
#    This program is free software; you can redistribute it and/or modify       #
#    it under the terms of the GNU Lesser General Public License version        #
#    3 as published by the Free Software Foundation.                            #
#                                                                               #
#    This program is distributed in the hope that it will be useful,            #
#    but WITHOUT ANY WARRANTY; without even the implied warranty of             #
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the              #
#    GNU Lesser General Public License for more details.                        #
#                                                                               #
#    You should have received a copy of the GNU Lesser Public License           #
#    along with this program; if not, write to the Free Software                #
#    Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA                   #
#    02111-1307  USA                                                            #
#                                                                               #
#    Contact: Maxence.Guesdon@inria.fr                                          #
#################################################################################

# check for one particular file of the sources
AC_INIT(master.Makefile.in)

# The root directory where we will compile
ROOT=`pwd`

VERSION=1.0
PACKAGE=dot

# Check for Ocaml compilers

ocaml unix.cma str.cma checkocaml.ml ocaml_config.sh || exit 1
. ./ocaml_config.sh

############################
# substitutions to perform
AC_SUBST(OCAMLC)
AC_SUBST(OCAMLOPT)
AC_SUBST(OCAMLDEP)
AC_SUBST(OCAMLLEX)
AC_SUBST(OCAMLYACC)
AC_SUBST(OCAMLBEST)
AC_SUBST(OCAMLVERSION)
AC_SUBST(OCAMLLIB)
AC_SUBST(OCAMLBIN)
AC_SUBST(OCAMLDOC)
AC_SUBST(OCAMLFIND)
AC_SUBST(ROOT)

AC_SUBST(VERSION)
AC_SUBST(PACKAGE)

AC_SUBST(LIB_GTK)
AC_SUBST(LIB_GTK_BYTE)
AC_SUBST(GTK_PACKAGES)

# Finally create the master.Makefile.in
ACFILES="master.Makefile odot_version.ml META"
AC_OUTPUT($ACFILES)
chmod a-w master.Makefile odot_version.ml META
